// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should be rendered correctly 1`] = `
<div
  className="root uui-text uui-font-regular uui-color-primary line-height-18 font-size-14 v-padding-9 container"
>
  Test
</div>
`;

exports[`Text should be rendered correctly 2`] = `
<div
  className="root uui-text uui-font-regular uui-color-primary line-height-30 font-size-24 v-padding-9 container"
  onClick={[Function]}
>
  Test
</div>
`;
